<resources>
    <string name="app_name">TipCalc</string>
    <string name="cost_of_service">Cost of Service</string>
    <string name="how_was_the_service">How was the Service?</string>
    <string name="amazing_20">Amazing(20%)</string>
    <string name="good_18">Good(18%)</string>
    <string name="okay_15">Okay(15%)</string>
    <string name="round_up_tip">Round up tip ?</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_amount">Tip Amount :%s</string>
</resources>